test/cases/errors/harmony-import-missing2/module2.js
export { a } from "./missing2";
export * from "./a?2";
